@@ -23,7 +23,6 @@ memoryLeftReadable = "Amount of left over memory [MB]:"
 maxRuntimeReadable = "Max Runtime [Seconds]:"
 analyseProtectedMethodsReadable = "Analyse protected methods:"
 analysePrivateMethodsReadable = "Analyse private methods:"
-useScopeAnalysisReadable = "Use scope analysis:"
 maxStepNumberReadable = "Max steps in the backtrace:"
 arrayCountLimitReadable = "Max array size for normal analysis:"
 languageKeyReadable = "Language key:"
@@ -46,7 +45,6 @@ memoryLeftHelp = "kreXX checks regularly how much memory is left. Here you can a
 maxRuntimeHelp = "kreXX checks during the analysis how much time has elapsed since start. Here you can adjust the amount where it will trigger an emergency break.<br />Unit of measurement is seconds."
 analyseProtectedMethodsHelp = "Here you can toggle if kreXX shall analyse the protected methods of a class."
 analysePrivateMethodsHelp = "Here you can toggle if kreXX shall analyse the private methods of a class."
-useScopeAnalysisHelp = "Shall kreXX analyse all reachable class properties and methods? If set to 'TRUE', the default configuration for private and protected stuff is overwritten, in case that value is reachable."
 maxStepNumberHelp = "A backtrace tends to produce a lot of output, and browsers tend to have problems with more than 100MB output in HTML text. Normally it is not unnecessary to go back more than 10 steps, but if you need to, you can increase this number here."
 unhandedOtherHelp = "This is a (so far) unhandeled variable type. If you read this, please open a ticket on our Github bugtracker, so we can add a proper analysis for this type."
 arrayCountLimitHelp = "When encountering an array larger than this number, kreXX will resort to a simplified array analysis. This means that classes or other arrays in this large array will only get a rudimentary analysis to prevent an overkill output."
@@ -173,7 +171,6 @@ memoryLeftReadable = "Übrig behaltener Speicher [MB]:"
 maxRuntimeReadable = "Maximale Laufzeit [Sekunden]:"
 analyseProtectedMethodsReadable = "Analysiere Protected Methoden:"
 analysePrivateMethodsReadable = "Analysiere Private Methoden:"
-useScopeAnalysisReadable = "Benutze die Scope Analyse:"
 maxStepNumberReadable = "Maximale Schritte in einem Backtrace:"
 arrayCountLimitReadable = "Maximale Array Größe für die normale Analyse:"
 languageKeyReadable = "Sprachschlüssel:"
@@ -200,7 +197,6 @@ maxRuntimeHelp = "kreXX überprüft regelmäßig wie lange sein Start her ist. H
 analyseProtectedMethodsHelp = "Hier kann eingestellt werden ob kreXX Protected Methoden von Klassen analysieren soll."
 analysePrivateMethodsHelp = "Hier kann eingestellt werden ob kreXX Private Methoden einer Klasse analysieren soll."
 analyseGetterHelp = "Soll kreXX versuchen die Ergebnisse von Getter-Methoden zu erraten?<br/> Diese Methoden werden nicht aufgerufen. kreXX wird versuchen die (möglichen) Werte aus den Klassen Properties zu zeihen, was zu falschen Ergebnissen führen kann."
-useScopeAnalysisHelp = "Soll kreXX alle erreichbaren Klassen Properties und Methoden analysieren? Wenn ja, werden die entsprechenden Einstellungen lokal überschrieben, falls die dazugehörigen Werte erreichbar sind."
 arrayCountLimitHelp = "Wenn kreXX auf einen sehr großen Array analysieren soll wird eine einfachere Array-Analyse genutzt. Das bedeutet, dass Objekte oder andere Arrays, welche darin enthalten sind nur rudimentär analysiert werden, um nicht zu viel Output zu erzeugen."
 languageKeyHelp = "Der Sprachschlüssel für die Hilfedatei(en). Als Fallback wird 'text' genutzt, welcher englische Werte enthällt. kreXX wird in zwei Sprachen ausgeliefert, Englisch und  Deutsch (de)."
 
