@@ -15,6 +15,7 @@
   callback.
 - Change: Remove the inherited constants from the kreXX
   main class.
+- Change: Removed the scope analysis setting.
 
 4.1.3
 - Added microtime analysis to the float routing.
